--- a/index.html
+++ b/index.html
@@ -4,29 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sollon Bar&Restaurant</title>
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
-    <header class="navbar navar-expand-lg sticky-top">
+    <header class="navbar navbar-expand-lg sticky-top p-4">
         <div class="container">
             <h1 class="navbar-brand">Sollon Bar&Restaurant</h1>
+            <button class="navbar-toggle" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
+                <span class="navbar-toggle-icon"></span>
+            </button>
+            <nav class="navbar-collapse collapse" id="menu-navegacao">
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a href="" class="nav-link active">
+                            <i class="bi bi-house-door me-1"></i>
+                            Sobre o Restaurante
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">
+                        <i class="bi bi-calendar-check me-1"></i>
+                            Eventos
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">
+                            <i class="bi bi-card-text me-1"></i>
+                            Cardápio
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">
+                            <i class="bi bi-chat-left-text me-1"></i>
+                            Fale conosco
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a href="" class="nav-link active">Sobre o Restaurante</a>
-                </li>
-                  <li class="nav-item">
-                    <a href="" class="nav-link">Eventos</a>
-                </li>
-                  <li class="nav-item">
-                    <a href="" class="nav-link">Cardápio</a>
-                </li>
-                  <li class="nav-item">
-                    <a href="" class="nav-link">Fale conosco</a>
-                </li>
-            </ul>
-        </nav>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
