--- a/index.html
+++ b/index.html
@@ -6,39 +6,42 @@
     <title>Sollon Bar&Restaurant</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js">
+
 </head>
 <body>
     <header class="navbar navbar-expand-lg sticky-top p-4">
         <div class="container">
-            <h1 class="navbar-brand">Sollon Bar&Restaurant</h1>
-            <button class="navbar-toggle" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
-                <span class="navbar-toggle-icon"></span>
+            <h1 class="navbar-brand m-0">Sollon Bar&Restaurant</h1>
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="menu-navegacao">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <nav class="navbar-collapse collapse" id="menu-navegacao">
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
+            <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
+                <ul class="nav nav-pills d-block d-md-flex">
+                    <li class="nav-item fw-bold">
                         <a href="" class="nav-link active">
                             <i class="bi bi-house-door me-1"></i>
                             Sobre o Restaurante
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item fw-bold">
                         <a href="" class="nav-link">
                         <i class="bi bi-calendar-check me-1"></i>
                             Eventos
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item fw-bold">
                         <a href="" class="nav-link">
                             <i class="bi bi-card-text me-1"></i>
                             Cardápio
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item fw-bold">
                         <a href="" class="nav-link">
                             <i class="bi bi-chat-left-text me-1"></i>
                             Fale conosco
@@ -48,6 +51,38 @@
             </nav>
         </div>
     </header>
+    <section id="sobre-o-restaurante">
+        <div class="carousel-slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="1500">
+                    <img src="images/slides/slide1.png" alt="Foto espaço interno do restaurante">
+                </div>
+                <div class="carousel-item" data-bs-interval="1500">
+                    <img src="images/slides/slide2.png" alt="Duas taças de vinho">
+                </div>
+                <div class="carousel-item" data-bs-interval="1500">
+                    <img src="images/slides/slide3.png" alt="Umamesa com comida">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
+
+            </div>
+        </div>
+
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+
