--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js">
-
 </head>
 <body>
-    <header class="navbar navbar-expand-lg sticky-top p-4">
+    <header class="navbar navbar-expand-lg sticky-top p-4" id="cabecalho">
         <div class="container">
-            <h1 class="navbar-brand m-0">Sollon Bar&Restaurant</h1>
+            <h1 class="navbar-brand m-0 section-title">Sollon Bar&Restaurant</h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
                 <ul class="nav nav-pills d-block d-md-flex">
                     <li class="nav-item fw-bold">
-                        <a href="" class="nav-link active">
+                        <a href="#sobre-o-restaurante" class="nav-link">
                             <i class="bi bi-house-door me-1"></i>
                             Sobre o Restaurante
                         </a>
@@ -51,35 +48,57 @@
             </nav>
         </div>
     </header>
-    <section id="sobre-o-restaurante">
-        <div class="carousel-slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="1500">
-                    <img src="images/slides/slide1.png" alt="Foto espaço interno do restaurante">
+    <div data-bs-spy="scroll" data-bs-target="cabecalho">
+        <section id="sobre-o-restaurante">
+            <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="1500">
+                        <img src="images/slides/slide1.png" alt="Foto espaço interno do restaurante">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="1500">
+                        <img src="images/slides/slide2.png" alt="Duas taças de vinho">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="1500">
+                        <img src="images/slides/slide3.png" alt="Umamesa com comida">
+                    </div>
                 </div>
-                <div class="carousel-item" data-bs-interval="1500">
-                    <img src="images/slides/slide2.png" alt="Duas taças de vinho">
-                </div>
-                <div class="carousel-item" data-bs-interval="1500">
-                    <img src="images/slides/slide3.png" alt="Umamesa com comida">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </button>
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
-                <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-5">
+                        <img src="images/restaurante.jpg" class="d-block w-100 rounded" alt="Foto do espaço do restaurante">
+                    </div>
+                    <div class="col-md-7">
+                        <h2 class="section-title">Sobre o Restaurante</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eligendi itaque veritatis quibusdam praesentium quas autem a qui modi fuga quo beatae, atque nemo maiores voluptates molestias quis, magni totam.
+                        </p>
+                        <h3 class="section-title">Sobre o espaço</h3>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic tempora quos facilis temporibus nostrum minima rerum fugiat ab, quae suscipit eveniet natus distinctio aspernatur reprehenderit officiis, necessitatibus officia! Esse, voluptate.
+                        </p>
+                        <ul>
+                            <li>Item 1</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+    
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+        </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
