--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sollon Bar&Restaurant</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./bootstrap/cdn.jsdelivr.net_npm_bootstrap@5.3.2_dist_css_bootstrap.min.css">
 </head>
 <body>
     <header class="navbar navbar-expand-lg sticky-top p-4" id="cabecalho">
         <div class="container">
-            <h1 class="navbar-brand m-0 section-title">Sollon Bar&Restaurant</h1>
+            <h1 class="navbar-brand m-0 section-title text-white">Sollon Bar&Restaurant</h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,7 +26,7 @@
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="" class="nav-link">
+                        <a href="#eventos" class="nav-link">
                         <i class="bi bi-calendar-check me-1"></i>
                             Eventos
                         </a>
@@ -74,7 +73,7 @@
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
                 </div>
             </div>
-            <div class="container">
+            <div class="container mar-separar">
                 <div class="row">
                     <div class="col-md-5">
                         <img src="images/restaurante.jpg" class="d-block w-100 rounded" alt="Foto do espaço do restaurante">
@@ -98,8 +97,48 @@
                 </div>
             </div>
         </section>
+        <section id="eventos" class="pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <h2 class="section-title text-center">Para todas <span>as ocasiões</span></h2>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-md-4">
+                        <img src="images/eventos/aniversario.jpg" class="d-block w-100 rounded mb-2" alt="">
+                        <h3 class="section-title text-colored">
+                            <i class="bi bi-calendar-heart-fill"></i>
+                            Aniversários
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis dolores delectus ipsam, neque saepe architecto sit labore sequi. Accusamus est aperiam officia corporis corrupti dicta pariatur doloribus laborum, animi placeat.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="images/eventos/casamento.jpg" class="d-block w-100 rounded mb-2" alt="">
+                        <h3 class="section-title text-colored">
+                            <i class="bi bi-arrow-through-heart-fill"></i>
+                            Casamento
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis dolores delectus ipsam, neque saepe architecto sit labore sequi. Accusamus est aperiam officia corporis corrupti dicta pariatur doloribus laborum, animi placeat.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="images/eventos/confraternizacoes.jpg" class="d-block w-100 rounded mb-2" alt="">
+                        <h3 class="section-title text-colored">
+                            <i class="bi bi-people-fill"></i>
+                            Confraternizações
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis dolores delectus ipsam, neque saepe architecto sit labore sequi. Accusamus est aperiam officia corporis corrupti dicta pariatur doloribus laborum, animi placeat.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/bootstrap/cdn.jsdelivr.net_npm_bootstrap@5.3.2_dist_js_bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
