--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="" class="nav-link">
+                        <a href="#cardapio" class="nav-link">
                             <i class="bi bi-card-text me-1"></i>
                             Cardápio
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="" class="nav-link">
+                        <a href="#faleConosco" class="nav-link">
                             <i class="bi bi-chat-left-text me-1"></i>
                             Fale conosco
                         </a>
@@ -91,7 +91,6 @@
                             <li>Item 1</li>
                             <li>Item 2</li>
                             <li>Item 3</li>
-    
                         </ul>
                     </div>
                 </div>
@@ -133,56 +132,100 @@
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis dolores delectus ipsam, neque saepe architecto sit labore sequi. Accusamus est aperiam officia corporis corrupti dicta pariatur doloribus laborum, animi placeat.
                         </p>
                     </div>
-
                 </div>
             </div>
         </section>
         <section id="cardapio">
             <div class="container">
                 <div class="row">
-                    <h2 class="section-title text-center">Nosso <span class="text-colored">Cardápio</span></h2>
+                    <h2 class="section-title text-center m-4">Nosso <span class="text-colored">Cardápio</span></h2>
                 </div>
                 <div class="row">
                     <aside class="col-md-2">
                         <nav class="nav nav-pills flex-column nav-cardapio">
-                            <button type="button" class="nav-link fw-bold text-start text-colored active">Bebidas não alcólicas</button>
-                            <button type="button" class="nav-link fw-bold text-start text-colored">Bebidas alcólicas</button>
-                            <button type="button" class="nav-link fw-bold text-start text-colored">Entradas</button>
-                            <button type="button" class="nav-link fw-bold text-start text-colored">Pratos Principais</button>
-                            <button type="button" class="nav-link fw-bold text-start text-colored">Sobremesa</button>
+                            <button onclick = "bebidasSemAlcool()" type="submit" id="item-cardapio" class="nav-link fw-bold">Bebidas não alcólicas</button>
+                            <button onclick = "bebidasAlcoolicas()" type="submit" id="item-cardapio" class="nav-link fw-bold">Bebidas alcólicas</button>
+                            <button onclick = "entrada()" type="submit" id="item-cardapio" class="nav-link fw-bold">Entradas</button>
+                            <button onclick = "pratos()" type="submit" id="item-cardapio" class="nav-link fw-bold">Pratos Principais</button>
+                            <button onclick = "sobremesas()" type="submit" id="item-cardapio" class="nav-link fw-bold">Sobremesa</button>
                         </nav>
                     </aside>
                     <div class="col-md-10">
                         <div class="tab-content">
-                            <div class="tab-pane active">
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="images/cardapio/bebidas/coca-cola.jpg" alt="">
-                                        <h5 class="text-colored fw-bold">Coca-cola</h5>
-                                        <p>
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        </p>
+                            <div class="tab-pane active ca-Espacar">
+                                <div>
+                                    <div id="bebidasNaoAlcolicas">
+                                        <div class="disp col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/bebidas/coca-cola.jpg" alt="">
+                                            <h5 class="text-colored fw-bold">Coca-cola</h5>
+                                            <p class="text-black">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </p>
+                                        </div>
+                                        <div class="disp col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/bebidas/suco.jpg" alt="">
+                                            <h5 class="text-colored fw-bold">Sucos</h5>
+                                            <p class="text-black">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="images/cardapio/bebidas/suco.jpg" alt="">
-                                        <h5 class="text-colored fw-bold">Sucos</h5>
-                                        <p>
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        </p>
+                                    <div id="bebidasAlcoolicas">
+                                        <div class="disp col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/bebidas/cerveja.jpg" alt="">
+                                            <h5 class="text-colored fw-bold mt-2">Cerveja</h5>
+                                            <p class="text-black">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </p>
+                                        </div>
+                                        <div class="disp col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/bebidas/vinho.jpg" alt="">
+                                            <h5 class="text-colored fw-bold mt-2">Vinhos</h5>
+                                            <p class="text-black">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="images/cardapio/bebidas/cerveja.jpg" alt="">
-                                        <h5 class="text-colored fw-bold mt-2">Cerveja</h5>
-                                        <p>
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        </p>
+                                    <div id="entrada">
+                                        <div class="disp col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/entradas/entrada.jpg" alt="">
+                                            <h5 class="text-colored fw-bold mt-2">Entrada</h5>
+                                            <p class="text-black">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="images/cardapio/bebidas/vinho.jpg" alt="">
-                                        <h5 class="text-colored fw-bold mt-2">Vinhos</h5>
-                                        <p>
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        </p>
+                                    <div id="pratos">
+                                        <div class="disp col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/pratos/pizza.jpg" alt="">
+                                            <h5 class="text-colored fw-bold mt-2">Pizza</h5>
+                                            <p class="text-black">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </p>
+                                        </div>
+                                        <div class="disp col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/pratos/salmao.jpg" alt="">
+                                            <h5 class="text-colored fw-bold mt-2">Salmao</h5>
+                                            <p class="text-black">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </p>
+                                        </div> 
+                                    </div>
+                                    <div id="sobremesas">
+                                        <div class="disp col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/sobremesas/bolo.jpg" alt="">
+                                            <h5 class="text-colored fw-bold mt-2">Bolo</h5>
+                                            <p class="text-black">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </p>
+                                        </div>
+                                        <div class="disp col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/sobremesas/cupcake.jpg" alt="">
+                                            <h5 class="text-colored fw-bold mt-2">Cupcake</h5>
+                                            <p class="text-black">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </p>
+                                        </div>    
                                     </div>
                                 </div>
                             </div>
@@ -190,9 +233,46 @@
                     </div>
                 </div>
             </div>
-
+        </section>
+        <section>
+            <div id="faleConosco" class="container pd-3">
+                <div class="row">
+                    <h2 class="section-title text-center m-4">Fale <span class="text-colored">conosco</span></h2>
+                </div>
+                <div class="row m-3 mb-6">
+                    <div class="col-md-6"
+                       <form class="faleConosco">
+                            <label>Nome:</label> <br>
+                            <input required class="w-100" type="text"><br>
+                            <label>Email:</label><br>
+                            <input class="w-100 d-block"type="email">
+                            <label>Escreva sua mensagem:</label>
+                            <textarea class="w-100" cols="30" rows="3"></textarea>
+                            <button class="btn btn-primary" type="submit">Enviar</button>
+                       </form>
+                    </div>
+                    <div class="mr-3 col-md-6">
+                       <form class="endereco">
+                            <p class="">
+                                <span class="fw-bold">Endereço:</span> Rua Lorem ipsum dolor sit, ame <br>
+                                <span class="fw-bold">Nº:</span> 1425, 4ª andar , sala 142  <br>
+                                <span class="fw-bold">Bairro:</span> Guarulhos  <br>
+                                <span class="fw-bold">cidade:</span> São Paulo <br>
+                                <span class="fw-bold">cep:</span> 00673-210 <br>
+                            </p>
+                       </form>
+                    </div>
+                </div>
+        </section>
+        <section>
+            <div class="text-center rodape">
+                <p>
+                    &COPY; Todos os direitos reservados
+                </p>
+            </div>
         </section>
     </div>
+    <script src="index.js"></script>
     <script src="/bootstrap/cdn.jsdelivr.net_npm_bootstrap@5.3.2_dist_js_bootstrap.bundle.min.js"></script>
 </body>
 </html>
